[gd_scene load_steps=5 format=3 uid="uid://dpqfqvi2ri3bx"]

[ext_resource type="Texture2D" uid="uid://d24hcaj3584bm" path="res://Assets/Textures/Placeholders/Rectangle 65.png" id="1_3q2xh"]
[ext_resource type="Texture2D" uid="uid://bblhelu2xlnbg" path="res://Assets/Textures/Placeholders/white_texture.png" id="2_1mkby"]
[ext_resource type="Script" uid="uid://brvio2olotinl" path="res://Scripts/Card Game/StatusEffectUi.gd" id="2_bmtlp"]
[ext_resource type="FontFile" uid="uid://b2lwqd3u504hn" path="res://Assets/Fonts/BigSpace-rPKx.ttf" id="3_i4165"]

[node name="StatusEffectUI" type="TextureRect"]
z_index = 6
custom_minimum_size = Vector2(15, 15)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3q2xh")
expand_mode = 1
stretch_mode = 4
script = ExtResource("2_bmtlp")

[node name="Information" type="TextureRect" parent="."]
visible = false
self_modulate = Color(0, 0, 0, 0.294118)
custom_minimum_size = Vector2(175, 125)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -76.0
offset_right = 167.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(87.5, 62.5)
mouse_filter = 2
texture = ExtResource("2_1mkby")
expand_mode = 1

[node name="DescLabel" type="RichTextLabel" parent="Information"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3305.0
offset_bottom = 2375.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
mouse_filter = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("3_i4165")
theme_override_font_sizes/normal_font_size = 325
bbcode_enabled = true
text = "Does x Damage"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
